*syncthing-0.12.19 (09 Mar 2016)

  09 Mar 2016;  <bene@gentoo.org> +syncthing-0.12.19.ebuild:
  net-p2p/syncthing:  update to 0.12.19

*syncthing-0.12.18 (14 Feb 2016)

  14 Feb 2016;  <bene@gentoo.org> +syncthing-0.12.18.ebuild:
  net-p2p/syncthing: update to 0.12.18

*syncthing-0.12.17 (08 Feb 2016)

  08 Feb 2016;  <bene@gentoo.org> +syncthing-0.12.17.ebuild:
  net-p2p/syncthing: update to 0.12.17

*syncthing-0.12.10 (02 Jan 2016)

  02 Jan 2016;  <bene@gentoo.org> +syncthing-0.12.10.ebuild:
  net-p2p/syncthing: update to 0.12.10

*syncthing-0.12.7 (07 Dec 2015)

  07 Dec 2015;  <bene@gentoo.org> +syncthing-0.12.7.ebuild:
  net-p2p/syncthing: update to 0.12.7

*syncthing-0.11.26 (05 Oct 2015)

  05 Oct 2015;  <bene@gentoo.org> +syncthing-0.11.26.ebuild:
  net-p2p/syncthing: update to 0.11.26

  20 Sep 2015;  <bene@gentoo.org> files/conf.d/syncthing,
  files/init.d/syncthing:
  net-p2p/syncthing: init script updated

*syncthing-0.11.25 (19 Sep 2015)

  19 Sep 2015;  <bene@gentoo.org> +syncthing-0.11.25.ebuild:
  net-p2p/syncthing: update to 0.11.25

*syncthing-0.11.17 (27 Jul 2015)

  27 Jul 2015;  <github@itfriend.de> +files/conf.d/syncthing,
  +files/init.d/syncthing, +metadata.xml, +syncthing-0.11.17.ebuild:
  Initial import of syncthing