@@ -7,6 +7,7 @@ DIST syncthing-0.12.10.tar.gz 4013063 SHA256 9bea460f7d2098bb2eecce5f0e2788616d9
 DIST syncthing-0.12.17.tar.gz 4046320 SHA256 e9ac76e28423ac9d01c29b560ea6c4c61e881dd706676eb07d66aa5993310c60 SHA512 9c0e3bc0e23d2ec8ef9c888dc66cdc1aeac07bbffd03d4eae00539215cf0798db83da2b607b6570880bc941a8eac0b07c9b0257ad16546ebf63056a37807186b WHIRLPOOL 055a799cf5d544c11167fa11c1304a3a2978557578052a1392efa19ad363182a310401e3024317a7101859fa83647e79e6cc3559c12e79371a1135a22708d810
 DIST syncthing-0.12.18.tar.gz 4046127 SHA256 e0d1af4f29c9e2325507a7daf4bf97098c87c321a7e075125b66ddaa34b37eb4 SHA512 2f2351a983b3d384e9fe65c87d67b81f20fc20b7b43b8d2fab882131bd4e4119f0cf099571d617f22f0125c43224c653e93329392204f3e0ff6c6a3bba7d8263 WHIRLPOOL cfe491241e9ef4ebd19042a3cc3188771cf64d67c0faa29feda7da5980f86a38c1e284938074271e25bbfb881eca1ca56f237bf81a61be4d836287cbfab27eb2
 DIST syncthing-0.12.19.tar.gz 4047476 SHA256 5a7035029974fe0fb496d9f8af880a50bcc8499ff5eef7ee4ef48f08df37820e SHA512 89d2b34c5bb9772bcaad84caa03794cdcfeade8fef0b8abaeea6a1cccdc09167a690aa8b1dfadac81d9ac0e8a07c9be112af7f2e56f12f589b906c518c49a686 WHIRLPOOL c0589a5e6a4f090dee9f79bb199c901b3f0e75cf0f92c12851a9713cdf7e813c8a5564ce475000529d2a5edafb9861d1b820858cb6fa3bb5bf082ff5586da9b3
+DIST syncthing-0.12.20.tar.gz 4047350 SHA256 89dc46ebbe8b114467abe0171fd03a76408a9cf4fe44308db2b6d60eee233006 SHA512 1df45f4f778b1f2784f0787695bf5f94796747bc103d032b07e4cdb1108211a5debcfb5a10c0284bee43f896e011e29264e49216216570efe563822efce4907c WHIRLPOOL 8614a87d4b03737dc69e966933314925efa4f2ccd9966af4d44930244a87d2819397c059cec2af2544161c9ab0df41ce7e578d156c4ca0cb911975e10a230aad
 DIST syncthing-0.12.7.tar.gz 3991315 SHA256 9b39507d6d18827859bbf8b6c56fdc19d8b1b75f9fafb340230ed8f604eb8f34 SHA512 b13602422c3df34f0acffe282583d5483a489fe2faf8943612cd68ed3a1287355a0b64268b0e828ba8fe98ab361441ee1e66171eeb6385596e9cceea6b3166b5 WHIRLPOOL 4c16b2b66ef279ddb6b4f82f2b6e3174dbf7fca22a011f62c0282efb943003b620ec331838739151fcbf77e7707d0be12c6693930befa4c5d402c81fbbcf8940
 EBUILD syncthing-0.11.17.ebuild 1985 SHA256 324c40caddbec4919e4b77910033a6d66bf9da6efe96436f74796778033374a8 SHA512 5a6fc4700b4a58138bdd102e3e340a9ee3c60e37af3d53180bb9c2280b2e90541429d72eed710a03aec0aec3b5c511b24332cea98e6f3ee83784964095099301 WHIRLPOOL ff99c62ccfe129bca92b1f72ba82401c1b7a0460eb1ce6e6f524b99b62cff830603d4b930efd3a0feac9157e488e789880d7c16523cc904e6eef05814d2c71bc
 EBUILD syncthing-0.11.25.ebuild 1985 SHA256 58bbb440812649c64f3f8b57090fff83a77cdefe4e0a527da05801c30207b30b SHA512 067331ecb80842833f6d6eb186aaab566b11c9d233b55b16bb0dec3c66d7464dc20bbc51951313a9233a58f7774da65924b51d1dd362824a7ab86944741bd76a WHIRLPOOL c40aa77258811e54207ccfe856ba8192433c137ea6748ebcc67e3aa32118010434075eefe2a72623a07e3f4b7dffa87da2bf4be2d0f1f89c11381aad6d89255b
@@ -15,6 +16,7 @@ EBUILD syncthing-0.12.10.ebuild 1990 SHA256 00849a24d679c82f40ebf0da5edf6aadf60e
 EBUILD syncthing-0.12.17.ebuild 1990 SHA256 00849a24d679c82f40ebf0da5edf6aadf60e40467c96bf1d37c620f7ede46441 SHA512 41b709826c657dc066b149277b12df150ea80f54fc4fecc28c6ee833cd09f0808dc3a107827d43f94b56f565b7d17a1df68a870dcc59105e2dae479e525a806a WHIRLPOOL c09d143edc637f5babf933558ed6fa96b35d6bb8352327d14a4c6dd0f5e260d1c5409e62f890db91d234d9beef28c32e9709de5269babaeea325295d9032151a
 EBUILD syncthing-0.12.18.ebuild 1990 SHA256 00849a24d679c82f40ebf0da5edf6aadf60e40467c96bf1d37c620f7ede46441 SHA512 41b709826c657dc066b149277b12df150ea80f54fc4fecc28c6ee833cd09f0808dc3a107827d43f94b56f565b7d17a1df68a870dcc59105e2dae479e525a806a WHIRLPOOL c09d143edc637f5babf933558ed6fa96b35d6bb8352327d14a4c6dd0f5e260d1c5409e62f890db91d234d9beef28c32e9709de5269babaeea325295d9032151a
 EBUILD syncthing-0.12.19.ebuild 1990 SHA256 00849a24d679c82f40ebf0da5edf6aadf60e40467c96bf1d37c620f7ede46441 SHA512 41b709826c657dc066b149277b12df150ea80f54fc4fecc28c6ee833cd09f0808dc3a107827d43f94b56f565b7d17a1df68a870dcc59105e2dae479e525a806a WHIRLPOOL c09d143edc637f5babf933558ed6fa96b35d6bb8352327d14a4c6dd0f5e260d1c5409e62f890db91d234d9beef28c32e9709de5269babaeea325295d9032151a
+EBUILD syncthing-0.12.20.ebuild 1990 SHA256 00849a24d679c82f40ebf0da5edf6aadf60e40467c96bf1d37c620f7ede46441 SHA512 41b709826c657dc066b149277b12df150ea80f54fc4fecc28c6ee833cd09f0808dc3a107827d43f94b56f565b7d17a1df68a870dcc59105e2dae479e525a806a WHIRLPOOL c09d143edc637f5babf933558ed6fa96b35d6bb8352327d14a4c6dd0f5e260d1c5409e62f890db91d234d9beef28c32e9709de5269babaeea325295d9032151a
 EBUILD syncthing-0.12.7.ebuild 1985 SHA256 58bbb440812649c64f3f8b57090fff83a77cdefe4e0a527da05801c30207b30b SHA512 067331ecb80842833f6d6eb186aaab566b11c9d233b55b16bb0dec3c66d7464dc20bbc51951313a9233a58f7774da65924b51d1dd362824a7ab86944741bd76a WHIRLPOOL c40aa77258811e54207ccfe856ba8192433c137ea6748ebcc67e3aa32118010434075eefe2a72623a07e3f4b7dffa87da2bf4be2d0f1f89c11381aad6d89255b
-MISC ChangeLog 1264 SHA256 ff2b492e63a2e4fda819add9b54f82ca91e5688c84f85ad78b711eceb28f95e6 SHA512 5e241b3dc1606410a368744241ca6d3865e1c0322abb3d843a4b6a3cb9502728de93d239139704e6afc419906653d3a6e8375cdf2773f2034b73b36cedc8298e WHIRLPOOL f1b49463b3c0e8b02727e1880b2c411f685677fe1d6f7977c6f5b41b4a4d55fefa62ea0ba24779be108e08d96f0010a26a6bec76e0926c14a7afc39c9d740bfa
+MISC ChangeLog 1400 SHA256 0bfa0c167743c7b34d2e8d4923c17f23fa0f1e40d9b6a45b773a90d235402aa6 SHA512 000b7892d04e0810c7fa0df3fafa8aba5ad62f51c335a44bf3f057627a8242273f45d2e2ab89ce31aa360b73929b096e082ab8873c00fa475424aafc90f8247c WHIRLPOOL 75ff4afb7fe1a66cf8296d3239feb503efd30b757dd771142eca5cbee6e53d81919b46e2c69d782fcc0ae85418ccbbb4eb77855f731fd7ea0e9258e854971bb0
 MISC metadata.xml 255 SHA256 d37af9d9dd2745aa5898fca919a1bc6d1dd8e33ac02e899937430a881d643f58 SHA512 caa92d9ff8deb2709bec92d910ec20e85c1bcc24a2888c3ee081053d42677f9f84e5256175727fba139e51cbf306947ab50ff92d25bc27994b9350cbe97b21a7 WHIRLPOOL 8e4fa5b7600afc1c5a9127f095bce3b175e4454ddd1355a5eb677f07040f110a156fcd5464c96fbb403193312072dd470ac41656603de57364a308c6fb5b0d5a
