@@ -1,3 +1,8 @@
+*syncthing-0.12.20 (09 Mar 2016)
+
+  09 Mar 2016;  <bene@gentoo.org> +syncthing-0.12.20.ebuild:
+  net-p2p/syncthing:  update to 0.12.20
+
 *syncthing-0.12.19 (09 Mar 2016)
 
   09 Mar 2016;  <bene@gentoo.org> +syncthing-0.12.19.ebuild:
